# imu

./: .gitignore  Cargo.toml  Dockerfile  Makefile  imucrate_plotting.py  imucrate_timing_test.py  plot_imu.py  pyproject.toml  setup.py
.github/workflows/: publish.yml  test.yml
examples/: graph_hexmove.py  hexmove.py  hiwonder_example.py
imu/: Cargo.toml  __init__.py  requirements-dev.txt
imu/berryimu/: README.md
imu/bindings/: Cargo.toml  build.rs
imu/bindings/src/: hexmove.rs  hiwonder.rs  lib.rs
imu/bindings_hiwonder/: Cargo.toml  pyproject.toml
imu/bindings_hiwonder/src/: lib.rs
imu/bmi088/: Cargo.toml
imu/bmi088/src/: lib.rs  registers.rs
imu/bno055/: Cargo.toml  plot_imu.py
imu/bno055/src/: lib.rs  registers.rs
imu/drivers/bmi088/: Cargo.toml
imu/drivers/bno055/: Cargo.toml
imu/drivers/bno055/src/: lib.rs
imu/drivers/hexmove/: Cargo.toml
imu/drivers/hexmove/src/: lib.rs
imu/drivers/hiwonder/: Cargo.toml
imu/drivers/hiwonder/hiwonder_macros/: Cargo.toml
imu/drivers/hiwonder/hiwonder_macros/src/: lib.rs
imu/drivers/hiwonder/src/: frame.rs  lib.rs  port.rs  register.rs
imu/hexmove/: Cargo.toml
imu/hexmove/src/: lib.rs
imu/hiwonder/: Cargo.toml  README.md  __init__.py
imu/hiwonder/src/: lib.rs  main.rs  plot_imu.py
imu/imu-traits/: Cargo.toml
imu/imu-traits/src/: lib.rs
imu/src/: data.rs  lib.rs
imu/synchronized/: Cargo.toml
imu/synchronized/src/: lib.rs
