[package]
name = "imu"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Interface for interacting with various IMU devices"
license.workspace = true
repository.workspace = true
readme = "README.md"

[lib]
name = "imu"
crate-type = ["rlib"]

[dependencies]
log = "0.4"
bno055 = { version = "0.4.0", optional = true }
bmi088 = { version = "0.2.1", optional = true }
hiwonder = { version = "0.3.2", optional = true }
hexmove = { version = "0.1.6", optional = true }

[features]
default = []
# Define features that enable the optional dependencies
bno055 = ["dep:bno055"]
bmi088 = ["dep:bmi088"]
hiwonder = ["dep:hiwonder"]
hexmove = ["dep:hexmove"]
# Optional: A feature to enable all IMUs
full = ["bno055", "bmi088", "hiwonder", "hexmove"]
