[package]
name = "imu"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Interface for interacting with various IMU devices"
license.workspace = true
repository.workspace = true
readme = "README.md"

[lib]
name = "imu"
crate-type = ["rlib"]

[dependencies]
log = "0.4"
hexmove = {version="0.1.6", optional=true}
hiwonder = {version="0.3.2", optional=true}
linux_bno055 = {version="0.0.7", optional=true}
linux_bmi088 = {version="0.0.1", optional=true}
socketcan = {version="3.3.0", optional=true}

[features]
default = []
# Define features that enable the optional dependencies
bno055 = ["dep:linux_bno055"]
bmi088 = ["dep:linux_bmi088"]
hiwonder = ["dep:hiwonder"]
hexmove = ["dep:hexmove"]
full = ["bno055", "bmi088", "hiwonder", "hexmove"]
