[package]
name = "imu"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Interface for interacting with various IMU devices"
license.workspace = true
repository.workspace = true
readme = "README.md"

[lib]
name = "imu"
crate-type = ["rlib"]

[dependencies]
log = "0.4"
serialport="4.7.1"
imu-traits = {path="imu-traits"}
hexmove = {path="drivers/hexmove"}
hiwonder = {path="drivers/hiwonder"}
linux_bno055 = {path="drivers/bno055"}
linux_bmi088 = {path="drivers/bmi088"}
