[package]
name = "hiwonder"
version = "0.4.0"
readme = "README.md"
description = "Interface for interacting with Hiwonder IMUs"
edition = "2021"
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
serialport = "4.2.0"
imu-traits = { path = "../../imu-traits" }
hiwonder_macros = { path = "hiwonder_macros" }
bitflags = "2.9.0"

[lib]

name = "hiwonder"
crate-type = ["rlib"]
