[package]
name = "hiwonder"
version = "0.5.0"
readme = "README.md"
description = "Interface for interacting with Hiwonder IMUs"
edition = "2021"
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
serialport = "4.2.0"
imu-traits = "0.0.2"
hiwonder_macros = { path = "hiwonder_macros", version = "0.1.0" }
bitflags = "2.9.0"

[lib]

name = "hiwonder"
crate-type = ["rlib"]
