[package]
name = "hiwonder"
version = "0.5.2"
readme = "README.md"
description = "Interface for interacting with Hiwonder IMUs"
edition = "2021"
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
serialport = "4.2.0"
imu-traits = "0.0.2"
hiwonder_macros = "0.1.4"
bitflags = "2.9.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[lib]

name = "hiwonder"
crate-type = ["rlib"]
